--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -6,5 +6,7 @@
   link: /schedule.html
 - name: FAQ
   link: /faq.html
+- name: Lab 1
+  link: /lab-1-build-micro-cdn.html
 # - name: Project
 #   link: /project.html
