--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -12,7 +12,9 @@
   link: /lab-2-https.html
 - name: Lab 3
   link: /lab-3-openvpn.html
-- name: Lab 4
-  link: /lab-4-outline.html
+# - name: Lab 4
+#   link: /lab-4-outline.html
 # - name: Project
 #   link: /project.html
+- name: Lab 4
+  link: /lab-4-latex.html
