--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -6,15 +6,15 @@
   link: /schedule.html
 - name: FAQ
   link: /faq.html
-- name: Lab 1
-  link: /lab-1-build-micro-cdn.html
-- name: Lab 2
-  link: /lab-2-https.html
-- name: Lab 3
-  link: /lab-3-openvpn.html
+# - name: Lab 1
+#   link: /lab-1-build-micro-cdn.html
+# - name: Lab 2
+#   link: /lab-2-https.html
+# - name: Lab 3
+#   link: /lab-3-openvpn.html
 # - name: Lab 4
 #   link: /lab-4-outline.html
 # - name: Project
 #   link: /project.html
-- name: Lab 4
-  link: /lab-4-latex.html
+# - name: Lab 4
+#   link: /lab-4-latex.html
