--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -10,8 +10,8 @@
   link: /lab-1-gns3.html
 - name: Lab 2
   link: /lab-2-https.html
-# - name: Lab 1
-#   link: /lab-1-build-micro-cdn.html
+- name: Lab 3
+  link: /lab-3-build-micro-cdn.html
 # - name: Lab 2
 #   link: /lab-2-https.html
 # - name: Lab 3
