--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -1,5 +1,5 @@
-times: Tuesdays, Thursdays 6:25pm - 7:40pm
-room: "Chem & Physics 101"
+times: Monday/Wednesday 6:25pm - 7:40pm
+room: "PG6 114"
 name: Alex Afanasyev
 contact: aa at cs.fiu.edu
 office_hours: By appointment
