--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -1,5 +1,5 @@
 times: Monday/Wednesday 6:25pm - 7:40pm
-room: "PG6 114"
+room: "GL 166"
 name: Alex Afanasyev
 contact: aa at cs.fiu.edu
 office_hours: By appointment
@@ -37,7 +37,7 @@ midterm: TBD
 #   #    - name:     Final draft
 #   #      deadline: Nov 19, 2019
 
-final: TBD
+final: GL
 # # final_room: GL 139
 
 # # projects:
