--- a/_data/course_info.yml
+++ b/_data/course_info.yml
@@ -37,7 +37,7 @@ midterm: TBD
 #   #    - name:     Final draft
 #   #      deadline: Nov 19, 2019
 
-final: GL
+final: "GL 166"
 # # final_room: GL 139
 
 # # projects:
